package ucd.comp3013j.ems.model.dto;

public class EventDTO {
    
}
