package ucd.comp3013j.ems.model.repos;

import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.data.jpa.repository.support.JpaRepositoryFactory;
import ucd.comp3013j.ems.model.entities.Event;

public interface EventRepository extends JpaRepository<Event, Long> {
    
}
