package com.eventmanagementsystem.repository;

public interface AccountRepository {
}
